--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
     <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
-        <!--<header class="header">
+        <header class="header">
             <div class="container header__container">
+                <div class="menu">
+                    <a class="logo" href="index.html"><span class="logo--blue">Web</span>Studio</a>
+                    <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                        <svg class="menu__icon" width="40px" height="40px">
+                            <use href="./images/icons.svg#menu"></use>
+                        </svg>
+                    </button>
+                </div>
                 <nav class="site-nav">
                     <a class="logo" href="index.html"><span class="logo--blue">Web</span>Studio</a>
                     <ul class="site-nav__list">
@@ -40,13 +48,13 @@
                     <li class="contacts__item">
                         <a href="tel:+380961111111" class="contacts__link ">
                             <svg class="contacts__icon" width="10px" height="16px">
-                                <use hr-ef="./images/icons.svg#smartphone"></use>
+                                <use href="./images/icons.svg#smartphone"></use>
                             </svg>
-                        +38 096 111 11 11</a>
+                            +38 096 111 11 11</a>
                     </li>
                 </ul>
             </div>
-        </header>-->
+        </header>
         <main>
             <section class="hero">
                 <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
@@ -524,8 +532,57 @@
                 </form>
             </div>
         </div>
+        <div class="menu-container js-menu-container" id="mobile-menu">
+            <button class="menu-toggle js-close-menu" aria-expanded="false" aria-controls="mobile-menu">
+                <svg class="close__icon" width="40px" height="40px">
+                    <use href="./images/icons.svg#close_40px"></use>
+                </svg>
+            </button>
+            <ul class="menu__list">
+                <li class="menu__item">
+                    <a href="./index.html" class="menu__link menu__link--current">Студия</a>
+                </li>
+                <li class="menu__item">
+                    <a href="./portfolio.html" class="menu__link">Портфолио</a>
+                </li>
+                <li class="menu__item">
+                    <a href="./index.html" class="menu__link">Контакты</a>
+                </li>
+            </ul>
+            <ul class="menu__contacts">
+                <li class="menu__contacts__item">
+                    <a href="tel:+380961111111" class="menu__contacts__link--accent ">
+                        +38 096 111 11 11</a>
+                </li>
+                <li class="menu__contacts__item ">
+                    <a href="mailto:info@devstudio.com" class="menu__contacts__link">
+                        info@devstudio.com</a>
+                </li>
+            </ul>
+            <ul class="menu__social">
+                <li class="social__item">
+                    <a href="" class="menu__social-link">
+                    Instagram</a>
+                </li>
+                <li class="social__item">
+                    <a href="" class="menu__social-link">
+                    Twitter</a>
+                </li>
+                <li class="social__item">
+                    <a href="" class="menu__social-link">
+                    Facebook</a>
+                </li>
+                <li class="social__item">
+                    <a href="" class="menu__social-link">
+                    LinkedIn</a>
+                </li>
+            </ul>
+        </div>
         <script src="./js/modal.js">
-            
         </script>
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+            integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+            crossorigin="anonymous"></script>
+        <script defer src="./js/mobile-menu.js"></script>
 </body>
 </html> 
