--- a/index.html
+++ b/index.html
@@ -111,21 +111,21 @@
                     <h2 class="section__title about__title--mob">Чем мы занимаемся</h2>
                     <ul class="about">
                         <li class="about__item">
-                            <img src="./images/box1.jpg" alt="Програмист пишет код" width="370"
+                            <img srcset="./images/box1-1x.jpg 1x, box1-2x.jpg 2x" src="./images/box1-1x.jpg" alt="Програмист пишет код" width="370"
                                     height="294">
                             <p class="about__text">
                                 Десктопные приложения
                             </p>        
                         </li>
                         <li class="about__item">
-                            <img src="./images/box2.jpg" alt="разработка мобильных приложений"
+                            <img srcset="./images/box2-1x.jpg 1x, box2-2x.jpg 2x"src="./images/box2-1x.jpg" alt="разработка мобильных приложений"
                                     width="370" height="294">
                             <p class="about__text">
                                 Мобильные приложения
                             </p>
                         </li>
                         <li class="about__item">
-                            <img src="./images/box3.jpg" alt="графические приложения" width="370"
+                            <img srcset="./images/box3-1x.jpg 1x, box3-2x.jpg 2x"src="./images/box3-1x.jpg" alt="графические приложения" width="370"
                                     height="294">
                             <p class="about__text">
                                 Дизайнерские решения
@@ -560,19 +560,19 @@
                 </li>
             </ul>
             <ul class="menu__social">
-                <li class="social__item">
+                <li class="menu__social-item">
                     <a href="" class="menu__social-link">
                     Instagram</a>
                 </li>
-                <li class="social__item">
+                <li class="menu__social-item">
                     <a href="" class="menu__social-link">
                     Twitter</a>
                 </li>
-                <li class="social__item">
+                <li class="menu__social-item">
                     <a href="" class="menu__social-link">
                     Facebook</a>
                 </li>
-                <li class="social__item">
+                <li class="menu__social-item">
                     <a href="" class="menu__social-link">
                     LinkedIn</a>
                 </li>
