--- a/portfolio.html
+++ b/portfolio.html
@@ -26,10 +26,10 @@
                 <a class="logo" href="index.html"><span class="logo--blue">Web</span>Studio</a>
                 <ul class="site-nav__list">
                     <li class="site-nav__item">
-                        <a href="./index.html" class="site-nav__link site-nav__link--current">Студия</a>
+                        <a href="./index.html" class="site-nav__link ">Студия</a>
                     </li>
                     <li class="site-nav__item">
-                        <a href="./portfolio.html" class="site-nav__link ">Портфолио</a>
+                        <a href="./portfolio.html" class="site-nav__link site-nav__link--current">Портфолио</a>
                     </li>
                     <li class="site-nav__item">
                         <a href="" class="site-nav__link ">Контакты</a>
@@ -457,19 +457,19 @@
             </li>
         </ul>
         <ul class="menu__social">
-            <li class="menu_social-item">
+            <li class="menu__social-item">
                 <a href="" class="menu__social-link">
                     Instagram</a>
             </li>
-            <li class="menu_social-item">
+            <li class="menu__social-item">
                 <a href="" class="menu__social-link">
                     Twitter</a>
             </li>
-            <li class="menu_social-item">
+            <li class="menu__social-item">
                 <a href="" class="menu__social-link">
                     Facebook</a>
             </li>
-            <li class="menu_social-item">
+            <li class="menu__social-item">
                 <a href="" class="menu__social-link">
                     LinkedIn</a>
             </li>
