--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
         </header>
         <main>
             <section class="hero">
-                <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                <div class="container">
+                    <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero__button btn" type="button" data-modal-open>Заказать услугу</button>
+                </div>
+                
             </section>
             <section class="section">
                 <div class="container">
@@ -549,34 +552,37 @@
                     <a href="./index.html" class="menu__link">Контакты</a>
                 </li>
             </ul>
-            <ul class="menu__contacts">
-                <li class="menu__contacts__item">
-                    <a href="tel:+380961111111" class="menu__contacts__link--accent ">
-                        +38 096 111 11 11</a>
-                </li>
-                <li class="menu__contacts__item ">
-                    <a href="mailto:info@devstudio.com" class="menu__contacts__link">
-                        info@devstudio.com</a>
-                </li>
-            </ul>
-            <ul class="menu__social">
-                <li class="menu__social-item">
-                    <a href="" class="menu__social-link">
-                    Instagram</a>
-                </li>
-                <li class="menu__social-item">
-                    <a href="" class="menu__social-link">
-                    Twitter</a>
-                </li>
-                <li class="menu__social-item">
-                    <a href="" class="menu__social-link">
-                    Facebook</a>
-                </li>
-                <li class="menu__social-item">
-                    <a href="" class="menu__social-link">
-                    LinkedIn</a>
-                </li>
-            </ul>
+            <div class="menu__bottom-wrap">
+                <ul class="menu__contacts">
+                    <li class="menu__contacts__item">
+                        <a href="tel:+380961111111" class="menu__contacts__link--accent ">
+                            +38 096 111 11 11</a>
+                    </li>
+                    <li class="menu__contacts__item ">
+                        <a href="mailto:info@devstudio.com" class="menu__contacts__link">
+                            info@devstudio.com</a>
+                    </li>
+                </ul>
+                <ul class="menu__social">
+                    <li class="menu__social-item">
+                        <a href="" class="menu__social-link">
+                            Instagram</a>
+                    </li>
+                    <li class="menu__social-item">
+                        <a href="" class="menu__social-link">
+                            Twitter</a>
+                    </li>
+                    <li class="menu__social-item">
+                        <a href="" class="menu__social-link">
+                            Facebook</a>
+                    </li>
+                    <li class="menu__social-item">
+                        <a href="" class="menu__social-link">
+                            LinkedIn</a>
+                    </li>
+                </ul>
+            </div>
+            
         </div>
         <script src="./js/modal.js">
         </script>
